--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.application.name=SegundoProyectoSpringPostgreSQL
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuraci\u00F3n de PostgreSQL (Render)
-spring.datasource.url=jdbc:postgresql://d4acpdfdiees73d14grg-a.frankfurt-postgres.render.com:5432/postgresbd_s0g1
+spring.datasource.url=jdbc:postgresql://d4acpdfdiees73d14grg-a.frankfurt-postgres.render.com:5432/postgresbd
 spring.datasource.username=postgresbd
-spring.datasource.password=U52M0WpodlYp8yG5Mjl98EY6zRAMHOEw
+spring.datasource.password=1Utz0lmpQZ2o80GTTUiilg0Xn5eqvl2q
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Render requiere conexion SSL
