--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=SegundoProyectoSpringPostgreSQL
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuraci\u00F3n de PostgreSQL (Render)
-spring.datasource.url=jdbc:postgresql://d4acpdfdiees73d14grg-a.frankfurt-postgres.render.com:5432/postgresbd
+spring.datasource.url=jdbc:postgresql://postgresbd:1Utz0lmpQZ2o80GTTUiilg0Xn5eqvl2q@dpg-d4jccjur433s7399qfjg-a/postgresbd_ariu
 spring.datasource.username=postgresbd
 spring.datasource.password=1Utz0lmpQZ2o80GTTUiilg0Xn5eqvl2q
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -15,16 +15,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Render requiere conexion SSL
 spring.datasource.hikari.data-source-properties.ssl=true
 spring.datasource.hikari.data-source-properties.sslmode=require
-# Configuración de HikariCP (pool de conexiones)
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.max-lifetime=1800000
+
 
 # Configuracion JPA
 spring.jpa.hibernate.ddl-auto=update
-
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Para ver las SQL que se ejecutan
 spring.jpa.show-sql=true
