--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=SegundoProyectoSpringPostgreSQL
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuraci\u00F3n de PostgreSQL (Render)
-spring.datasource.url=jdbc:postgresql://postgresbd:1Utz0lmpQZ2o80GTTUiilg0Xn5eqvl2q@dpg-d4jccjur433s7399qfjg-a/postgresbd_ariu
+spring.datasource.url=jdbc:postgresql://dpg-d4jccjur433s7399qfjg-a:5432/postgresbd_ariu?sslmode=require
 spring.datasource.username=postgresbd
 spring.datasource.password=1Utz0lmpQZ2o80GTTUiilg0Xn5eqvl2q
 spring.datasource.driver-class-name=org.postgresql.Driver
